# ArrScripts

./: .gitignore  add_all_indexers.py  build.bat  common.py  main.py  pyproject.toml  radarr_torrents.json  run.bat  sonarr_torrents.json  test.py
