[tool.poetry]
name = "arrScripts"
version = "0.1.0"
description = "Helper utility to manage arr services"
authors = ["Tongwei Dai <tongweid@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
dacite = "*"
tomlkit = "*"
httpx = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
